tidying up after various talks

--- a/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
+++ b/intention motor representation joint action (paper 3)/conf collective intentionality manchester 2012/motor representation and shared intention.tex
@@ -540,7 +540,7 @@ Effective joint actionâ€”imagine two people erecting a tent in a gale togetherâ€
 To characterise the harmony required, let us define a notion of matching:
 %
 \begin{quote}
-Two  outcomes, A and B, \emph{match} in a particular context just if, in that context, either the occurrence of A would normally constitute or cause, at least partially, the occurrence of B or vice versa. 
+Two  outcomes, A and B, \emph{match} in a particular context just if, in that context, either the occurrence of A would normally cause or constitute, at least partially, the occurrence of B or vice versa. 
 \end{quote}
 %
 When joint action involves both shared intention and social motor representation, the outcomes each of these representations specify should match.
@@ -549,7 +549,7 @@ The challenge is to explain how matching could ever non-accidentally occur.
 %This will be particularly difficult if you suppose, as we do, that motor representation and intention are not inferentially integrated. 
 
 I think we can see a possible solution to this challenge by considering another problem.
-In building shared intention from ordinary individual intention, we need intentions \emph{that we J}.
+In constructing realisers of shared intention from ordinary individual intention, we need intentions \emph{that we J}.
 As has been much discussed, the contents of these intentions cannot all refer to actions involving shared intentions.
 For this reason Michael Bratman suggests that things we intend are  cooperatively neutral activities.
 It is then necessary to add further intentions in order to transform cooperatively neutral activities into joint actions.
@@ -557,6 +557,9 @@ But it also seems possible that in some cases, what we intend when we intend tha
 
 So perhaps harmony between shared intention and social motor representation is sometimes achieved in this way: what we intend when we share an intention is the sort of joint action that involves social motor representation.
 
+In conclusion, two things.
+First, some events are joint actions in virtue of being appropriately related to social motor representations which bind their components together and ensure that there is a single outcome to which these components are collectively directed.
+Second, and much more tentatively, in some cases social motor representation may be among the ingredients that realise a shared intention.
 
 
 \bibliography{$HOME/endnote/phd_biblio}
