--- a/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
+++ b/intention motor representation joint action (paper 3)/intention and motor representation in joint action.tex
@@ -271,7 +271,7 @@ For the shared intention
 involves a representation, on the part of each agent, of an outcome,
 coordinates the several agents’ activities
 and 
-coordinates the several agents’ activities in such a that would normally facilitate the occurrence of the represented outcome.
+coordinates the several agents’ activities in such a way that would normally facilitate the occurrence of the represented outcome.
 This is how a shared intention can bind together the activities comprising a joint action and link them to an outcome.
 %Shared intention does for joint action roughly what ordinary intention does for ordinary, individual action.
 
