working on ceu talk

--- a/joint action and knowing others minds/submit philosophical studies  2012-01/second submit/conf budapest ceu talk cognitive 2012-09/interacting mindreaders HANDOUT.tex
+++ b/joint action and knowing others minds/submit philosophical studies  2012-01/second submit/conf budapest ceu talk cognitive 2012-09/interacting mindreaders HANDOUT.tex
@@ -46,18 +46,59 @@
 
 \begin{center}
 {
-\textbf{Joint Action and the Emergence of Mindreading}
 \Large{Interacting Mindreaders}
 }
 
 
 %Stephen A. Butterfill
 
-<s.butterfill@warwick.ac.uk>
+<butterfillS@ceu.hu>
 
 \end{center}
 
-Could an interacting mindreader be in a position to know things which she would be unable to know were she unable to interact with her targets?
+Could interacting mindreaders be in a position to know things which they would be unable to know if they were manifestly passive observers? 
+
+
+
+\section{Terminology}
+\emph{Mindreading}: `In saying that an individual has a theory of mind, we mean that the individual imputes mental states to himself and to others ... the system can be used to make predictions, specifically about ... behavior.'\citep{premack_does_1978} %(Premack & Woodruff 1978: 515)
+
+\emph{Sophisticated forms of mindreading} involve imputing propositional attitudes such as belief, desire and intention in the course of constructing or evaluating  reason-giving, causal explanations of action.
+
+%\section{Joint action}
+%Paradigm cases in philosophy include two people 
+%	painting a house together, \citep{Bratman:1992mi}
+%	lifting a heavy sofa together, \citep{Velleman:1997oo} 
+%	preparing a hollandaise sauce together, \citep{Searle:1990em}
+%	going to Chicago together, \citep{Kutz:2000si} 
+%	and walking together. \citep{gilbert_walking_1990}
+%
+%In developmental psychology paradigm cases of joint action include  two people 
+%	tidying up the toys together, \citep{Behne:2005qh}
+%	cooperatively pulling handles in sequence to make a dog-puppet sing, \citep{Brownell:2006gu} 
+%	and bouncing a block on a large trampoline together.\citep{Tomasello:2007gl}
+%
+%Other paradigm cases from research in cognitive psychology include two people
+%	lifting a two-handled basket,  \citep{Knoblich:2008hy}
+%	putting a stick through a ring, \citep{ramenzoni_joint_2011}
+%	and swinging their legs in phase.\citep%[p. 284]
+%	{schmidt_richardons:_2008}
+
+
+\section{The Problem of Opaque Means}
+Ignorance about to which ends actions are means can be an obstacle to goal ascription.
+
+\section{Distributive Goals}
+A \emph{goal} is an outcome to which actions are, or might be, directed.  A \emph{goal-state} is an intention or other state of an agent linking an action to a goal to which it is directed.
+
+%A \emph{goal-directed joint action} is a joint action which, taken as a whole, is directed to a goal.
+
+The \emph{distributive goal} of two or more actions is G: (a) each action is individually directed to G; and (b) it is possible that: all actions succeed relative to this outcome.
+
+%\textbf{Collective goal}.  The \emph{collective goal} of two or more actions is G:
+%(a) G is a distributive goal of the outcomes;
+%(b) the actions are coordinated; and 
+%(c) coordination of this type would normally  facilitate occurrences of outcomes of G's type
 
 
 
@@ -65,11 +106,12 @@ Could an interacting mindreader be in a position to know things which she would 
 
 Csibra \& Gergely's principle of rational action: `an action can be explained by a goal state if, and only if, it is seen as the most justifiable action towards that goal state that is available within the constraints of reality.'\citep{Csibra:1998cx,Csibra:2003jv}
 
-%(Cf.\ Southgate et al's principle of efficiency:
-%`goal attribution requires that agents expend the least possible amount of energy within their motor constraints to achieve a certain end.' \citep%[p.\ 1061]
-%{Southgate:2008el})
+(Contrast a principle of efficiency:
+`goal attribution requires that agents expend the least possible amount of energy within their motor constraints to achieve a certain end.' \citep%[p.\ 1061]
+{Southgate:2008el})
 
 %
+
 
 
 These facts:
@@ -155,10 +197,17 @@ A failed reach (left) and a helpful point (right).\citep%[p.\ 557, figure 4]
 
 
 
-`the adult’s social cues conveyed her communicative intent, which in turn encouraged the child to `see through the sign'.'
+Leekam et al.: `the adult’s social cues conveyed her communicative intent, which in turn encouraged the child to `see through the sign'.'
 \citep%[p.\ 118]
 {leekam_adults_2010}
 
+
+Csibra: Early in human development,
+teleological and referential action interpretation 
+`rely on different kinds of action understanding' %\citep[p.\ 456]{Csibra:2003kp}
+and
+involve two distinct `action interpretation systems'   %\citep[p.\ 456]{Csibra:2003kp} 
+which come together later in development.\citep{Csibra:2003kp}
 
 
 
