--- a/joint action and knowing others minds/conf budapest ceu talk cognitive 2012-09/interacting mindreaders ceu talk.tex
+++ b/joint action and knowing others minds/conf budapest ceu talk cognitive 2012-09/interacting mindreaders ceu talk.tex
@@ -114,7 +114,7 @@ a purely passive mindreader observing from behind a one-way mirror
 is on a par with
 a mindreader who, actually or apparently, could interact with those she seeks to interpret.
 The two are on a par in this sense:
-in principle the same evidence could be available to each, and each can exploit the routes to knowledge in moving from evidence to ascriptions of thought and action.
+in principle the same evidence could be available to each, and each can exploit the same routes to knowledge in moving from evidence to ascriptions of thought and action.
 
 In this talk I aim to show that mindreaders actually or apparently capable of interacting with their targets are at an advantage not only in practice but also in theory.
 Their ascriptions could exploit routes to knowledge which would be unavailable if they were entirely passive observers.
@@ -615,97 +615,6 @@ Call this inference \emph{your-goal-is-my-goal}.
 To say that it characterises a route to knowledge implies two things.  
 First, in some cases it is possible to know the premises, 1–2, without already knowing the conclusion, 3.  
 Second, in some of those cases knowing the premises would put one in a position to know the conclusion.  
-We shall consider these points in turn
-
-
-Is it ever possible to know the premises without first knowing the conclusion?  
-Consider the first premise.  
-Sometimes 
-in the right contexts
-an individual can recognize in another's facial expressions, engaging gestures or synchronized bodily movements that she is about to attempt to engage in joint action with her.
-Exploiting these indicators does not typically depend on knowing the particular contents of any beliefs, desires or goals.  
-Expressions, gestures and movements can naturally indicate imminent jointness in much the way they can also naturally indicate emotions.\footnote{
-Ideas along these lines are suggested by the discussion of {emergent coordination} in \citet{Knoblich:2010fk}.
-}  
-Of course these indicators do not guarantee that others are  about to attempt to engage in joint action.  
-But they are sufficiently reliable to ground knowledge in some cases.  
-The existence of such indicators shows that knowing the first  premise of the above inference does not require already knowing which particular goals the other's actions will be directed to.  
-
-Not everything needs to rest on indicators, however.
-It is sometimes possible to know that others are about to attempt to engage in joint action with you even without relying on such indicators.  
-Thanks to widespread dispositions to act jointly, in some situations it is reasonable to take for granted that others will act jointly.  
-For example, this is often so for children struggling with a coat while surrounded by family or familiar adults.  
-And in at least some subcultures people using public transport can reasonably take for granted that, within limits, those around them will act jointly with them when the need is clear.
-Of course dispositions to engage in joint action may vary between cultural groups and situations.
-This may be fatal for the frequent traveller,
-but for others what matters is not whether the dispositions are universal but only that they are sufficiently widespread to be predictable.
-
-Turning to the second point,
-could knowing the premises of the your-goal-is-my-goal inference ever put one in a position to know the conclusion?  
-Of course the inference is not deductive and will only work when certain background conditions are met.  
-These background conditions include the other having largely true beliefs concerning which goal your actions are or will be directed to.
-After all, another agent may attempt to act jointly with you while being entirely mistaken about the goals of your actions.
-Where this happens, the premises of the inference might be true but the conclusion false.
-We shall return to this point later (in section \vref{sec:false_belief}). 
-For now, note that in some situations there is no requirement  to consider  this possibility, as for instance when stereotypes, conventions or simplicity should and do make the goal of your actions obvious to the other agent. 
-
-As well as having true beliefs concerning the goal of your actions, the other must be willing to pursue this goal. 
-This is not guaranteed by the truth of the premises of the inference. 
-For all these require, the other might be aware of the goal you envisage but attempting to initiate a joint action directed to another, quite different goal%
-%and would be unwilling to perform actions directed to the goal you envisage, so that the conclusion of the inference is false
-.  
-Perhaps, for example, the other disapproves of your project and is offering to act with you as part of an attempt to divert you.\footnote{
-We are grateful to anonymous referee for emphasising this point.
-}
-Note, however, that it is only reasonable for the other to attempt a joint action with you where you are in a position to know which goal the joint action would be directed to. 
-If no alternative goal ought to be salient to you and the other has done nothing to make an alternative salient, then it is not unreasonable for you to ignore the possibility that the other is unwilling to pursue the goal to which your actions will be directed. 
-This might easily be the case where, for instance, you are in a tidy kitchen patiently chopping your way through a large pile of carrots; it is perhaps less likely to be the case in a more cluttered kitchen where you are surrounded by all kinds of potential ingredients in different states of preparation. 
-In general, how strongly the truth of the premises of the your-goal-is-my-goal inference supports the truth of the conclusion will depend (among other conditions) on how salient alternative goals to which your actions might be directed ought to be to you.
-
-Given these and perhaps other background conditions,
-that others are about to attempt to engage in joint action with you 
-is sometimes sufficient reason to hold that
-you will end up acting jointly with them
- even where the goal to which your actions will be directed is already fixed.
-
-In short, then, the two requirements for the your-goal-is-my-goal inference to characterise a route to knowledge are met.  
-In some cases it is possible to know the premises without already knowing the conclusion thanks to natural expressions of willingness to engage in joint action.  
-And knowing the premises sometimes puts one in a position to know the conclusion thanks to the fact that, when things are going well, another's willingness to engage in joint action with you can be based on an accurate assessment of the goals of your actions.
-
-In principle,
-exploiting your-goal-is-my-goal does not require actually being in a position to interact with the target of goal ascription.
-It is sufficient (and would be necessary but for some special cases) to be taken by the target to be in a position to interact. 
-Our concern, however,
-is with cases that are likely to be important for understanding
-development or evolution.
-This motivates a focus on goal ascribers of limited sophistication
-who lack both deep insight into others' minds and fully-fledged communicative abilities.
-Such individuals are unlikely to be able to contrive or exploit situations in which they only appear to be in a position to interact with their targets.
-When we come to applications of your-goal-is-my-goal, the relevant cases will be those 
-in which a goal ascriber is manifestly in a position to interact with her target.
-
-We should also acknowledge that 
-mindreaders who only observe can make use of the premise about joint action that your-goal-is-my-goal depends on.  
-Knowing that the target of their mindreading  is about to attempt to engage in joint action with another agent might enable them to identify the goal of their target's actions. 
-We return to this issue in section \vref{sec:observing_joint_action}. 
-For now what matters is just that only interacting mindreaders can exploit your-goal-is-my-goal.
-
-The your-goal-is-my-goal route to knowledge is characterised by an inference.  
-However, exploiting this route to knowledge may not require actually making the inference or knowing the premises.  
-Depending on what knowing requires,
-it may be sufficient to believe the conclusion because one has reliably detected a situation in which the premises of the inference are true;
-it may not be necessary to think of this situation as a situation where the premises are true,
-nor even to be able to think of it in this way.
-Our aim in identifying the your-goal-is-my-goal inference is not to 
-defend a detailed hypothesis about  mechanisms of mindreading.
-Instead our present concerns are limited to a normative question about the evidential basis of mindreading.
-The your-goal-is-my-goal inference matters
-not because it describes exactly how anyone actually assigns goals (maybe it doesn't)
-but because 
-it characterises a route to knowledge
-that is closed to mere observers
-and open to interacting mindreaders.
- 
 
 \section{Avoiding the problem of opaque means}
 
